# careline

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CareLine-Presentation.html  README.md
backend/: .env.example  pyproject.toml
backend/careline/: __init__.py  combined.py  config.py  demo_server.py
backend/careline/adapters/: __init__.py  factory.py
backend/careline/adapters/auth/: __init__.py  internal_key.py  jwt.py  principals.py
backend/careline/adapters/llm/: __init__.py  _text.py  anthropic_backend.py  (+6 more)
backend/careline/api/: __init__.py  app.py  deps.py  errors.py
backend/careline/domain/: __init__.py  enums.py  thresholds.py
backend/careline/services/: __init__.py  approval_service.py  audit_service.py  auth_service.py  consultation_service.py  demo_runner.py  digest_service.py  dpdp_service.py  eval_rerun.py  extraction_service.py  hard_purge.py  patient_lookup_service.py  question_service.py
backend/scripts/: seed_demo.py
backend/tests/: test_config.py  test_scaffold.py
backend/tests/api/: conftest.py  test_app.py  test_console_audit_bridge.py  test_routers_audit.py  test_routers_auth.py  test_routers_brain.py  test_routers_consultations.py  test_routers_dpdp.py  test_routers_observability.py  test_routers_patient_record.py  test_routers_patients.py
backend/tests/brain/: test_approval_service.py  test_auth_service.py  test_bakeoff_audit.py  test_bakeoff_question_service.py  test_bakeoff_safety.py  test_brain.py  test_consultation_service.py  test_decision.py  test_dpdp_service.py  test_enums.py  test_extraction_service.py  test_graph.py  test_hard_purge.py  test_integration.py  test_parity.py  test_patient_lookup_service.py
backend/tests/data/: conftest.py  test_consent.py  test_consultation.py  test_fact.py  test_isolation_sev0.py  test_local_memory.py  test_mappers.py  test_mongo_memory.py  test_mongo_repositories.py  test_patient.py  test_ports.py  test_scoped_filter.py  test_seed.py  test_supersession.py  test_temporal.py
backend/tests/llm/: test_anthropic_backend.py  test_extraction_backend.py  test_factory.py  test_heuristic.py  test_openai_backend.py  test_ports.py  test_prompts.py  test_proposal.py  test_schemas.py
(+116 files in other folders)
