[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careline"
version = "0.0.1"
description = "CareLine — post-consultation multi-agent AI voice agent (LangGraph) with a deterministic safety spine."
requires-python = ">=3.11"
authors = [{ name = "CareLine Team" }]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Live LLM / infra extras are added slice-by-slice per the build plan
# (langgraph, motor, fastapi, anthropic, openai, langsmith). The M0 brain
# runs fully offline/keyless and needs only pydantic.
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["careline*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
