[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careline"
version = "0.0.1"
description = "CareLine — post-consultation multi-agent AI voice agent (LangGraph) with a deterministic safety spine."
requires-python = ">=3.11"
authors = [{ name = "CareLine Team" }]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "langgraph>=0.2",
]

[project.optional-dependencies]
# Live LLM / infra extras are added slice-by-slice per the build plan
# (langgraph, motor, fastapi, anthropic, openai, langsmith). The M0 brain
# runs fully offline/keyless and needs only pydantic.
auth = [
    "PyJWT>=2.8",
]
# Live reasoning backends (optional). The default spine runs on the keyless
# heuristic twins; install this extra + set OPENAI_API_KEY (or ANTHROPIC_API_KEY)
# to run on a real LLM.
llm = [
    "openai>=1.40",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "PyJWT>=2.8",
]
dev = [
    "pytest>=8.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "fastapi>=0.111",
]

[tool.setuptools.packages.find]
include = ["careline*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
